filestruct/test_data/bad_code/bad_attribute.stderr
error: unsupported attribute
 --> test_data/bad_code/bad_attribute.rs
  |
  |         #[filestruct(wagwan)]
  |                      ^^^^^^
