filestruct/test_data/bad_code/bad_attribute.rs
use filestruct::FromDir;

fn main() {
    #[allow(dead_code)]
    #[derive(FromDir)]
    struct F {
        #[filestruct(wagwan)]
        something: u32,
    }
}
